# anomalyx-edge-suite

./: .env.example  .gitignore  HELP.md  README.md  README_PYPI.md  agent_runner.py  bootstrap.py  build_executables.ps1  cli.py  dashboard_server.py  ops_tools.py  pyproject.toml  requirements.txt  safe_ids_ips_validation.py  simple_block_demo.py  start_agent.ps1  start_dashboard_server.ps1
anomalyx_core/: __init__.py  env_loader.py
anomalyx_core/ips/: __init__.py  enforcer.py  feature_extractor.py  feature_schema.py  orchestrator.py  packet_capture.py  policy_engine.py  signature_engine.py  zero_day_detector.py
anomalyx_core/models/: __init__.py  classifier.py  label_encoder.pkl  selected_features.pkl
anomalyx_core/templates/: __init__.py  dashboard.html  landing.html
templates/: dashboard.html  landing.html
